--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,11 @@
 name: Actions Workflow
 
-on: 
-  push:
-  pull_request:
+on:
+ schedule:
+   - cron: "0/5 * * * *"
+   - cron: "0/6 * * * *"
+ # push:
+ pull_request:
     types: [closed, assigned, opened, reopened]
 
 jobs:
